syntax = "proto3";

option csharp_namespace = "Features.Authentication.Register.Proto";

package Authentication;

service Authentication {
    rpc Register(RegisterRequest) returns (RegisterResponse);
}

message RegisterRequest {
    string username = 1;
    string password = 2;
    string email = 3;
    string firstName = 4;
    string lastName = 5;
}

message RegisterResponse {
    string userId = 1;
}
